# Blasteroids

./: CMakeLists.txt  README.md
include/: asteroid.h  blast.h  collision.h  debug.h  main.h  spaceship.h  text.h
src/: asteroid.c  blast.c  collision.c  debug.c  main.c  spaceship.c  text.c
